@@ -20,6 +20,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -40,7 +41,7 @@ import org.springframework.web.multipart.MultipartFile;
 @Transactional(readOnly = true)
 public class UserDetailService {
 
-    private static final Logger log = LoggerFactory.getLogger(UserDetailService.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(UserDetailService.class);
 
     private final PortfolioServiceHelper portfolioServiceHelper;
     private final CasDetailsMapper casDetailsMapper;
@@ -79,6 +80,19 @@ public class UserDetailService {
         return existingUser ? processExistingUser(casDTO) : processNewUser(casDTO);
     }
 
+    /**
+     * Processes a CasDTO object directly, bypassing the file parsing step.
+     * This is useful when the CasDTO is generated from another source, like a PDF conversion.
+     *
+     * @param casDTO The CasDTO object to process
+     * @return UploadFileResponse with processing statistics
+     */
+    public UploadFileResponse uploadFromDto(CasDTO casDTO) {
+        LOGGER.info("Processing CasDTO from converted source");
+        boolean existingUser = validateCasDTO(casDTO);
+        return existingUser ? processExistingUser(casDTO) : processNewUser(casDTO);
+    }
+
     private UploadFileResponse processExistingUser(CasDTO casDTO) {
         AtomicInteger newTransactions = new AtomicInteger();
         AtomicInteger newFolios = new AtomicInteger();
@@ -92,7 +106,7 @@ public class UserDetailService {
         UserCASDetails userCASDetails = null;
 
         if (userTransactionFromReqCount == userTransactionFromDBCount) {
-            log.info("No new transactions are added");
+            LOGGER.info("No new transactions are added");
         } else {
             userCASDetails = importNewTransaction(
                     casDTO,
@@ -143,7 +157,7 @@ public class UserDetailService {
 
         // Check if all new transactions are added as part of adding schemes
         if (userTransactionFromReqCount == (userTransactionFromDBCount + newTransactions.get())) {
-            log.info("All new transactions are added as part of adding schemes, hence skipping");
+            LOGGER.info("All new transactions are added as part of adding schemes, hence skipping");
         } else {
             // New transactions are added
 
@@ -174,36 +188,64 @@ public class UserDetailService {
             Map<String, List<UserTransactionDetails>> userSchemaTransactionMapFromDB,
             List<UserSchemeDetails> existingUserSchemeDetailsList) {
 
+        // Create a map to collect new transactions by their scheme
+        Map<UserSchemeDetails, List<UserTransactionDetails>> transactionsByScheme = new HashMap<>();
+
         userSchemaTransactionMap.forEach((rtaCodeFromRequest, requestTransactions) -> {
             List<UserTransactionDetails> dbTransactions =
                     userSchemaTransactionMapFromDB.getOrDefault(rtaCodeFromRequest, List.of());
 
             if (requestTransactions.size() != dbTransactions.size()) {
-                // New transactions added to scheme
+                // For efficient lookup, create a set of transaction dates that already exist
                 Set<LocalDate> transactionDateSetDB = dbTransactions.stream()
                         .map(UserTransactionDetails::getTransactionDate)
                         .collect(Collectors.toSet());
 
-                requestTransactions.parallelStream().forEach(userTransactionDTO -> {
-                    LocalDate newTransactionDate = userTransactionDTO.date();
-                    if (!transactionDateSetDB.contains(newTransactionDate)) {
-                        log.info(
-                                "New transaction on date: {} created for rtaCode {} that is not present in the database",
-                                newTransactionDate,
-                                rtaCodeFromRequest);
-                        UserTransactionDetails userTransactionDetailsEntity =
-                                casDetailsMapper.transactionDTOToTransactionEntity(userTransactionDTO);
+                // Find matching scheme once outside the inner loop
+                UserSchemeDetails matchingScheme = existingUserSchemeDetailsList.stream()
+                        .filter(scheme -> rtaCodeFromRequest.equals(scheme.getRtaCode()))
+                        .findFirst()
+                        .orElse(null);
 
-                        existingUserSchemeDetailsList.forEach(userSchemeDetailsEntity -> {
-                            if (rtaCodeFromRequest.equals(userSchemeDetailsEntity.getRtaCode())) {
-                                userSchemeDetailsEntity.addTransaction(userTransactionDetailsEntity);
+                if (matchingScheme != null) {
+                    // Process all new transactions for this scheme
+                    List<UserTransactionDetails> newTransactionsForScheme = requestTransactions.stream()
+                            .filter(dto -> !transactionDateSetDB.contains(dto.date()))
+                            .map(dto -> {
+                                LOGGER.info(
+                                        "New transaction on date: {} created for rtaCode {} that is not present in the database",
+                                        dto.date(),
+                                        rtaCodeFromRequest);
+                                UserTransactionDetails entity = casDetailsMapper.transactionDTOToTransactionEntity(dto);
+                                entity.setUserSchemeDetails(matchingScheme);
                                 newTransactions.incrementAndGet();
-                            }
-                        });
+                                return entity;
+                            })
+                            .collect(Collectors.toList());
+
+                    if (!newTransactionsForScheme.isEmpty()) {
+                        transactionsByScheme.put(matchingScheme, newTransactionsForScheme);
                     }
-                });
+                }
             }
         });
+
+        // Process all transactions in a single batch where possible
+        if (!transactionsByScheme.isEmpty()) {
+            List<UserTransactionDetails> allNewTransactions = new ArrayList<>();
+
+            // Update in-memory relationships
+            transactionsByScheme.forEach((scheme, transactions) -> {
+                scheme.getTransactions().addAll(transactions);
+                allNewTransactions.addAll(transactions);
+            });
+
+            // Save all new transactions in a single batch operation
+            if (!allNewTransactions.isEmpty()) {
+                LOGGER.info("Batch saving {} new transactions", allNewTransactions.size());
+                userTransactionDetailsService.saveTransactions(allNewTransactions);
+            }
+        }
     }
 
     private Map<String, List<UserTransactionDetails>> groupExistingTransactionsByRtaCode(
@@ -233,7 +275,7 @@ public class UserDetailService {
             Long userTransactionFromDBCount) {
         // Check if all new transactions are added as part of adding folios
         if (userTransactionFromReqCount == (userTransactionFromDBCount + newTransactions.get())) {
-            log.info("All new transactions are added as part of adding folios, hence skipping");
+            LOGGER.info("All new transactions are added as part of adding folios, hence skipping");
         } else {
             // New schemes or transactions are added
 
@@ -259,6 +301,8 @@ public class UserDetailService {
             AtomicInteger newSchemes,
             AtomicInteger newTransactions) {
 
+        Map<UserFolioDetails, List<UserSchemeDetails>> newSchemesByFolio = new HashMap<>();
+
         requestedFolioSchemesMap.forEach((folioFromRequest, requestSchemes) -> {
             List<UserSchemeDetails> existingSchemesFromDB =
                     existingFolioSchemesMap.getOrDefault(folioFromRequest, new ArrayList<>());
@@ -267,24 +311,42 @@ public class UserDetailService {
                     .map(UserSchemeDetails::getRtaCode)
                     .collect(Collectors.toSet());
 
-            requestSchemes.stream()
-                    .filter(scheme -> !rtaCodeSet.contains(scheme.rtaCode()))
-                    .forEach(userSchemeDTO -> {
-                        log.info(
-                                "New RTACode: {} created for folio : {} that is not present in the database",
-                                userSchemeDTO.rtaCode(),
-                                folioFromRequest);
-                        UserSchemeDetails userSchemeDetailsEntity =
-                                casDetailsMapper.schemeDTOToSchemeEntity(userSchemeDTO, newTransactions);
+            // Find the matching folio entity
+            UserFolioDetails matchingFolio = userCASDetails.getFolios().stream()
+                    .filter(folio -> folioFromRequest.equals(folio.getFolio()))
+                    .findFirst()
+                    .orElse(null);
 
-                        userCASDetails.getFolios().forEach(userFolioDetailsEntity -> {
-                            if (folioFromRequest.equals(userFolioDetailsEntity.getFolio())) {
-                                userFolioDetailsEntity.addScheme(userSchemeDetailsEntity);
-                                newSchemes.incrementAndGet();
-                            }
-                        });
-                    });
+            if (matchingFolio != null) {
+                // Collect all new schemes for this folio
+                List<UserSchemeDetails> newSchemesForFolio = requestSchemes.stream()
+                        .filter(scheme -> !rtaCodeSet.contains(scheme.rtaCode()))
+                        .map(userSchemeDTO -> {
+                            LOGGER.info(
+                                    "New RTACode: {} created for folio : {} that is not present in the database",
+                                    userSchemeDTO.rtaCode(),
+                                    folioFromRequest);
+                            UserSchemeDetails entity =
+                                    casDetailsMapper.schemeDTOToSchemeEntity(userSchemeDTO, newTransactions);
+                            entity.setUserFolioDetails(matchingFolio);
+                            newSchemes.incrementAndGet();
+                            return entity;
+                        })
+                        .collect(Collectors.toList());
+
+                if (!newSchemesForFolio.isEmpty()) {
+                    newSchemesByFolio.put(matchingFolio, newSchemesForFolio);
+                }
+            }
         });
+
+        // Process all schemes in a single batch where possible
+        if (!newSchemesByFolio.isEmpty()) {
+            // Update in-memory relationships
+            newSchemesByFolio.forEach((folio, schemes) -> {
+                folio.getSchemes().addAll(schemes);
+            });
+        }
     }
 
     private Map<String, List<UserSchemeDetails>> groupExistingSchemes(
@@ -331,16 +393,30 @@ public class UserDetailService {
     }
 
     private UserCASDetails getUserCASDetails(UserCASDetails userCASDetails) {
-        UserCASDetails savedCasDetailsEntity = userCASDetailsService.saveEntity(userCASDetails);
-        CompletableFuture.runAsync(() -> userFolioDetailService.setPANIfNotSet(savedCasDetailsEntity.getId()));
-        CompletableFuture.runAsync(userSchemeDetailService::setUserSchemeAMFIIfNull);
+        // Extract AMFI codes before saving to avoid extra database fetches later
         List<Long> schemesList = userCASDetails.getFolios().stream()
                 .map(UserFolioDetails::getSchemes)
                 .flatMap(List::stream)
                 .map(UserSchemeDetails::getAmfi)
                 .filter(Objects::nonNull)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList()); // Using collect instead of toList() for thread safety
+
+        // Save entity in a single transaction
+        UserCASDetails savedCasDetailsEntity = userCASDetailsService.saveEntity(userCASDetails);
+
+        // Run non-critical post-processing tasks asynchronously
+        Long savedId = savedCasDetailsEntity.getId();
+        CompletableFuture.runAsync(() -> userFolioDetailService.setPANIfNotSet(savedId));
+        CompletableFuture.runAsync(userSchemeDetailService::setUserSchemeAMFIIfNull);
+
+        // Publish event with pre-collected schemes list
+        if (!schemesList.isEmpty()) {
+            applicationEventPublisher.publishEvent(new UploadedSchemesList(schemesList));
+        }
+
+        // Start portfolio value update asynchronously
+        portfolioValueUpdateService.updatePortfolioValue(savedCasDetailsEntity);
 
         applicationEventPublisher.publishEvent(new UploadedSchemesList(schemesList));
         portfolioValueUpdateService.updatePortfolioValue(savedCasDetailsEntity);
